# safe-xml-to-json

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
safe_xml_to_json/: __init__.py  core.py
tests/: test_safe_xml_to_json.py
